# Paddle

cmake/: cuda.cmake  inference_lib.cmake  operators.cmake
paddle/fluid/distributed/service/: communicator.cc  env.h  service.cc
paddle/fluid/framework/: CMakeLists.txt  naive_executor.cc  naive_executor.h  op_registry.h  op_version_registry.cc  op_version_registry.h  operator.cc  operator.h  tensor.cc  unused_var_check.cc  unused_var_check.h
paddle/fluid/framework/details/: CMakeLists.txt
paddle/fluid/framework/ir/: CMakeLists.txt  multihead_matmul_fuse_pass.cc
paddle/fluid/imperative/: profiler.cc
paddle/fluid/inference/: CMakeLists.txt
paddle/fluid/inference/anakin/: engine.cc  engine.h  op_teller.cc
paddle/fluid/inference/analysis/: CMakeLists.txt  analyzer.h  argument.h  flags.h  ir_pass_manager.cc  ut_helper.h
paddle/fluid/inference/api/: CMakeLists.txt  analysis_config.cc  analysis_predictor.cc  analysis_predictor.h  api.cc  api_anakin_engine.cc  infer_ernie_rank_trt.cc  mkldnn_quantizer.cc  mkldnn_quantizer.h  paddle_analysis_config.h  paddle_api.h  paddle_infer_tensor.h  paddle_inference_api.h  paddle_pass_builder.cc  paddle_tensor.h  paddle_tensorrt_predictor.h  tensorrt_predictor.cc  tensorrt_predictor.h  trt_dynamic_shape_test.cc
paddle/fluid/inference/api/details/: CMakeLists.txt  analysis_predictor.cc  analysis_predictor.h  analysis_predictor_tester.cc  api_impl.cc  api_impl_tester.cc  helper.cc  tensor_handle.cc  zero_copy_tensor.cc  zero_copy_tensor_dummy.cc  zero_copy_tensor_test.cc
paddle/fluid/inference/lite/: CMakeLists.txt  engine.cc  engine.h  op_teller.cc  tensor_utils.cc  test_engine.cc  test_predictor.cc
paddle/fluid/inference/tensorrt/: CMakeLists.txt  engine.cc  engine.h  op_teller.cc
paddle/fluid/inference/tests/: test.cmake
paddle/fluid/inference/trt_pred/: CMakeLists.txt  tensorrt_config.h  tensorrt_predictor.h
paddle/fluid/inference/utils/: io_utils_tester.cc
paddle/fluid/memory/allocation/: CMakeLists.txt  allocator_facade.cc  auto_growth_best_fit_allocator_facade_test.cc  cuda_allocator.cc  cuda_context_allocator.cc  cuda_context_allocator.h  naive_best_fit_allocator.cc  naive_best_fit_allocator.h  stream_allocator.cc  stream_allocator.h  thread_local_allocator.cc  thread_local_allocator.h
paddle/fluid/memory/detail/: buddy_allocator.cc  system_allocator.cc  system_allocator.h
paddle/fluid/operators/: CMakeLists.txt  index_sample_op.h  load_combine_op.cc  load_combine_op.h  tdm_child_op.h  tdm_sampler_op.h  unity_build_rule.cmake
paddle/fluid/operators/distributed/: communicator.cc  heart_beat_monitor.h  large_scale_kv.h
paddle/fluid/operators/jit/: benchmark.cc  gen_base.h
paddle/fluid/operators/lite/: CMakeLists.txt  lite_engine_op.h  lite_engine_op_test.cc  ut_helper.h
paddle/fluid/operators/math/: bert_encoder_functor.cu  blas_impl.cu.h  math_cuda_utils.h
paddle/fluid/platform/: device_context.cc  device_context.h  gpu_info.cc  init.cc
paddle/fluid/pybind/: compatible.cc  inference_api.cc  pybind.cc  pybind_boost_headers.h
paddle/fluid/string/: pretty_log.h
paddle/testing/: paddle_gtest_main.cc
python/paddle/fluid/: io.py
python/paddle/static/: __init__.py  io.py
python/paddle/utils/: deprecated.py
tools/: build_lite.sh
(+87 files in other folders)
